# flip-flop.rs

./: Cargo.toml  Makefile  README.md  README.md.erb
examples/: basic.rs  fizzbuzz.rs  sequence.rs
src/: lib.rs
tests/: reference.rb  tests.rs
